# personalRAG

./: pyproject.toml  requirements.txt
personal_rag/: main.py
personal_rag/components/: faq.py  sidebar.py
tests/unit_tests/: fake_file.py  test_chunking.py  test_embedding.py  test_parsing.py  test_qa.py  test_utils.py
