[tool.poetry]
name = "personal-rag"
version = "0.1.0"
description = ""
authors = ["Lena Yu <sf097182@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.8.5"
aiosignal = "1.3.1"
altair = "5.0.1"
async-timeout = "4.0.2"
attrs = "23.1.0"
blinker = "1.6.2"
cachetools = "5.3.1"
certifi = "2023.7.22"
charset-normalizer = "3.2.0"
click = "8.1.6"
cohere = "3.10.0"
colorama = "0.4.6"
dataclasses-json = "0.5.9"
decorator = "5.1.1"
docx2txt = "0.8"
faiss-cpu = "1.7.4"
filelock = "3.12.3"
frozenlist = "1.4.0"
fsspec = "2023.9.0"
gitdb = "4.0.10"
gitpython = "3.1.32"
greenlet = "2.0.2"
huggingface-hub = "0.16.4"
idna = "3.4"
importlib-metadata = "6.8.0"
jinja2 = "3.1.2"
jsonschema-specifications = "2023.7.1"
jsonschema = "4.18.4"
langchain = "0.0.220"
langchainplus-sdk = "0.0.20"
markdown-it-py = "3.0.0"
markupsafe = "2.1.3"
marshmallow-enum = "1.5.1"
marshmallow = "3.20.1"
mdurl = "0.1.2"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
numexpr = "2.8.4"
numpy = "1.25.1"
openai = "0.27.8"
openapi-schema-pydantic = "1.2.4"
packaging = "23.1"
pandas = "2.0.3"
pillow = "9.5.0"
protobuf = "4.23.4"
pyarrow = "12.0.1"
pycryptodome = "3.18.0"
pydantic = "1.10.11"
pydeck = "0.8.0"
pygments = "2.15.1"
pympler = "1.0.1"
pymupdf = "1.22.5"
python-dateutil = "2.8.2"
python-dotenv = "0.21.1"
pytz-deprecation-shim = "0.1.0.post0"
pytz = "2023.3"
pyyaml = "6.0.1"
referencing = "0.30.0"
regex = "2023.6.3"
requests = "2.31.0"
rich = "13.4.2"
rpds-py = "0.9.2"
safetensors = "0.3.3"
six = "1.16.0"
smmap = "5.0.0"
sqlalchemy = "2.0.19"
streamlit = "1.25.0"
tenacity = "8.2.2"
tiktoken = "0.4.0"
tokenizers = "0.13.3"
toml = "0.10.2"
toolz = "0.12.0"
tornado = "6.3.2"
tqdm = "4.65.0"
transformers = "4.33.1"
typing-extensions = "4.7.1"
typing-inspect = "0.9.0"
tzdata = "2023.3"
tzlocal = "4.3.1"
urllib3 = "1.26.16"
validators = "0.20.0"
watchdog = "3.0.0"
yarl = "1.9.2"
zipp = "3.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
